Completed sub tasks.

--- a/src/app/_content/app.less
+++ b/src/app/_content/app.less
@@ -1,4 +1,7 @@
 // global application styles
+
+@import "../../../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
+
 a {
     cursor: pointer;
 }
